--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h5 class="card-title">ohana
     </h5>
     <p class="card-text">ohana quer dizer familia</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <button type="button" class="btn btn-primary">Primary</button>
   </div>
 </div>
 
