--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="container d-flex justify-content-center text-center">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
   <img src="https://preview.redd.it/lilo-stitch-themed-posters-photobombing-other-disney-movies-v0-h5kn0ssuxppe1.jpg?width=640&crop=smart&auto=webp&s=876ac746589dfea1ed9eb49c35b43f0ba417dd21" class="card-img-top rounded-circle p-4" alt="...">
   <div class="card">
     <h5 class="card-title">ohana
