--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html>
 
 <head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="container d-flex justify-content-center text-center">
     <div class="card">
-  <img src="https://preview.redd.it/lilo-stitch-themed-posters-photobombing-other-disney-movies-v0-h5kn0ssuxppe1.jpg?width=640&crop=smart&auto=webp&s=876ac746589dfea1ed9eb49c35b43f0ba417dd21" class="card-img-top rounded-circle p-4" alt="...">
-  <div class="card">
-    <h5 class="card-title">ohana
-    </h5>
-    <p class="card-text">ohana quer dizer familia</p>
-    <button type="button" class="btn btn-primary">Primary</button>
+      <img
+        src="https://preview.redd.it/lilo-stitch-themed-posters-photobombing-other-disney-movies-v0-h5kn0ssuxppe1.jpg?width=640&crop=smart&auto=webp&s=876ac746589dfea1ed9eb49c35b43f0ba417dd21"
+        class="card-img-top rounded-circle p-4" alt="...">
+      <div class="card">
+        <h5 class="card-title">ohana
+        </h5>
+        <p class="card-text">ohana quer dizer familia</p>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 
 </body>
+
 </html>
